Aesthetic corrections, alignement of the vertical lines

--- a/src/app/complex/complex-results/complex-navigator/table-structure/table-interactor-column/table-interactor-column.component.css
+++ b/src/app/complex/complex-results/complex-navigator/table-structure/table-interactor-column/table-interactor-column.component.css
@@ -18,8 +18,8 @@ td {
   padding-left: 5px;
   border: 1px solid #0a494c;
   height: 50px;
-  max-width: 60px;
-  min-width: 60px;
+  max-width: 70px;
+  min-width: 70px;
   font-size: small;
 }
 
